añadiendo 3er modal

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     </span>
                     <input type="text" class="form-control" aria-label="...">
                   </div>
-                  <button type="button" class="btn btn-warning btn-register center-block">LOGING</button>
+                  <button type="button" class="btn btn-warning btn-register center-block ">LOGING</button>
                   <p class="btn-register"> Forgot password? <a class="text-danger" href="#">click here</a></p>
                 </div>
               </div>
@@ -229,10 +229,10 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="bg-info">
-            <form class="modal-body container-fluid"> <!-- boton de cerrar-  modal -->
+            <form class="modal-body container-fluid color-box"> <!-- boton de cerrar-  modal -->
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <button type="button" class="btn btn-primary btn-lg btn-block">Ya tienes una cuenta?</button>
-              <p class="text-center"> O CREA UNA CUENTA NUEVA</p>
+              <button type="button" class="btn btn-lg btn-block color-letra modal-class">Ya tienes una cuenta?</button>
+              <p class="text-center btn-register"> O CREA UNA CUENTA NUEVA</p>
               <div class="row">
                 <div class="form-group col-sm-6">
                   <input class="form-control" placeholder="Nombre">
@@ -256,7 +256,7 @@
                   <button type="button" class="btn btn-lg btn-block">Como te enteraste de nosotros? <span class="caret"></span> </button>
                 </div>
                 <div class="form-group col-sm-12">
-                  <button type="button" class="btn btn-primary btn-lg btn-block">ENVIAR</button>
+                  <button type="button" class="btn btn-info btn-lg btn-block">ENVIAR</button>
                 </div>
               </div>
             </form>
@@ -271,7 +271,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="bg-info">
-        <form class="modal-body container-fluid"> <!-- boton de cerrar-  modal -->
+        <form class="modal-body container-fluid color-box"> <!-- boton de cerrar-  modal -->
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div class="row">
               <div class="form-group col-sm-12">
@@ -281,7 +281,7 @@
                   <option>No</option>
                 </select>
               </div>
-              <div class="form-group col-sm-12">
+              <div class="form-group col-sm-12 logo-footer">
                 <label> Marca</label>
                 <select class="form-control">
                   <option> Elige la marca del vehiculo </option>
@@ -293,8 +293,8 @@
                   <option> Ferrari </option>
                   <option>Kia</option>
                 </select>
+                <p> No ves tu vehiculo en la lista? Envia un correo electronico <a href="#"> sociosmdv@uber.com </a> </p>
               </div>
-              <p class="col-sm-12"> No ves tu vehiculo en la lista? Envia un correo electronico <a href="#"> sociosmdv@uber.com </a> </p>
               <div class="form-group col-sm-12">
                 <label> Modelo</label>
                 <select class="form-control">
@@ -304,7 +304,7 @@
                   <option>Modelo 4 </option>
                 </select>
               </div>
-              <div class="form-group col-sm-12">
+              <div class="form-group col-sm-12 logo-footer">
                 <label> Año </label>
                 <select class="form-control">
                   <option> 1990 </option>
@@ -320,10 +320,11 @@
               <div class="form-group col-sm-12">
                 <label>Numero de la matricula</label>
                 <input type="text" class="form-control" placeholder="Numero de la matricula">
+                <p>La informacion de la matricula ayuda a los clientes a identificar tu vehiculo.</p>
               </div>
-              <p class="col-sm-12">La informacion de la matricula ayuda a los clientes a identificar tu vehiculo.</p>
+
               <div class="container-fluid">
-                <button type="button" class="btn btn-default btn-block">ENVIAR</button>
+                <button type="button" class="btn btn-info btn-block btn-lg">ENVIAR</button>
               </div>
             </div>
         </form>
