corrigiendo errores de posicion del header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!--barra de navegacion -  version desktoop  -->
             <div class=" collapse navbar-collapse navbar-right ">
-              <ul class="nav navbar-nav">
+              <ul class="nav navbar-nav btn">
                 <li><a href="#">Viaja</a></li>
                 <li><a href="#">Conduce</a></li>
                 <li><a href="#" data-toggle="modal" data-target="#myModal" >Inicia sesion</a>
